--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "babel-node index.js",
-    "start": "nodemon ./index.js --exec babel-node -e js",
+    "dev": "nodemon ./index.js --exec babel-node -e js",
     "test": "DEBUG=* nodemon ./index.js --exec babel-node -e js"
   },
   "author": "",
@@ -19,5 +19,8 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-0": "^6.24.1"
+  },
+  "engines": {
+    "node": "7.10.0"
   }
 }
