--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "babel-node index.js",
+    "start": "node index.js",
     "dev": "nodemon ./index.js --exec babel-node -e js",
     "test": "DEBUG=* nodemon ./index.js --exec babel-node -e js"
   },
